again change in readme and index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>ASSIGNMENT 1 HTML</title>
 <body>
-Hello world
+Hello world!!! How are you !!
 <li>apple</li>
 <li>mango</li>
 <li>peach</li>
