changes in all files

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>ASSIGNMENT 1 HTML</title>
 <body>
-Hello world
+Hello world!!! the weather is good today!!
 <li>apple</li>
 <li>mango</li>
 <li>peach</li>
