--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>ASSIGNMENT 1 HTML</title>
 <body>
 Hello world!!! the weather is good today!!
+<p>HOW are you !!</p>
 <li>apple</li>
 <li>mango</li>
 <li>peach</li>
